crates/nash-report/tests/can/snapshots/can__impls__impl_overlap_ignores_variable_names.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 905
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep (list (pair 'a 'a)) where\n    keep x = x\nimpl Keep (list (pair 'b 'b)) where\n    keep x = x\n"
info: diagnostic
---
nash::names::overlapping_impls

  × These `Main.Keep` impls can both match the same trait arguments. The overlapping
  │ head is (Builtin.list (Builtin.pair 'a0 'a0)):
   ╭─[src/Main.nash:6:1]
 3 │         keep : 'a -> 'a
 4 │ ╭─▶ impl Keep (list (pair 'a 'a)) where
 5 │ ├─▶     keep x = x
   · ╰──── first impl in `Main`
 6 │ ╭─▶ impl Keep (list (pair 'b 'b)) where
 7 │ ├─▶     keep x = x
   · ╰──── overlapping impl in `Main`
   ╰────
  help: Remove one impl or make their heads disjoint; context constraints do not
        disambiguate heads.
