crates/nash-report/tests/can/snapshots/can__impls__impl_unapplied_constructor.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 995
description: "module Main exposing (..)\n\ntrait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\n\nimpl Functor List where\n    map f xs = xs\n"
---
[
    Located {
        region: Region {
            start: Position {
                line: 6,
                column: 14,
            },
            end: Position {
                line: 6,
                column: 18,
            },
        },
        value: Named {
            reference: QualifiedName {
                home: ModuleName {
                    package: Some(
                        PackageName {
                            author: "nash",
                            project: "core",
                        },
                    ),
                    name: "Builtin",
                },
                name: "List",
            },
            args: [],
        },
    },
]
