crates/nash-report/tests/can/snapshots/can__impls__missing_superclass_is_rejected.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 509
description: "module Main exposing (..)\ntype Color = Red\ntrait Eq 'a where\n    eq : 'a -> 'a\ntrait Eq 'a => Ord 'a where\n    compare : 'a -> 'a\nimpl Ord Color where\n    compare x = x\n"
info: diagnostic
---
nash::names::missing_superclass

  × The `Main.Ord` impl for Main.Color does not establish superclass 1:
   ╭─[src/Main.nash:7:1]
 6 │         compare : 'a -> 'a
 7 │ ╭─▶ impl Ord Color where
 8 │ ╰─▶     compare x = x
   ╰────
  help: It must also satisfy `Main.Eq Main.Color`. I cannot find an impl or context
        constraint that provides it. Add the required impl or include the necessary
        constraint in this impl's context.
