crates/nash-report/tests/can/snapshots/can__impls__reflexive_lift_accepts_big_but_not_const.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 267
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\ntrait Lift 'a 'a => RoundTrip 'a where\n    roundTrip : 'a -> 'a\nimpl RoundTrip Color where\n    roundTrip x = x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\ntrait Lift 'a 'a => RoundTrip 'a where\n    roundTrip : 'a -> 'a\nimpl RoundTrip () where\n    roundTrip x = x\n"
info: diagnostic
---
Case 1: accepted
nash::names::missing_superclass

  × The `Main.RoundTrip` impl for Builtin.unit does not establish superclass 1:
   ╭─[src/Main.nash:6:1]
 5 │         roundTrip : 'a -> 'a
 6 │ ╭─▶ impl RoundTrip () where
 7 │ ╰─▶     roundTrip x = x
   ╰────
  help: It must also satisfy `Lift.Lift Builtin.unit Builtin.unit`. I cannot find an
        impl or context constraint that provides it. Add the required impl or include
        the necessary constraint in this impl's context.
