crates/nash-report/tests/can/snapshots/can__impls__superclass_impl_may_follow_its_use.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 536
description: "module Main exposing (..)\ntype Color = Red\ntrait Eq 'a where\n    eq : 'a -> 'a\ntrait Eq 'a => Ord 'a where\n    compare : 'a -> 'a\nimpl Ord Color where\n    compare x = x\nimpl Eq Color where\n    eq x = x\n"
---
[
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Eq",
        },
        heads: [
            Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Color",
                },
                args: [],
            },
        ],
    },
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Ord",
        },
        heads: [
            Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Color",
                },
                args: [],
            },
        ],
    },
]
